--- a/products/templates/products/edit_product.html
+++ b/products/templates/products/edit_product.html
@@ -22,7 +22,13 @@
             <div class="col-12 col-md-6">
                 <form method="POST" action="{% url 'edit_product' product.id %}" class="form mb-2" enctype="multipart/form-data">
                     {% csrf_token %}
-                    {{form | crispy}}
+                    {% for field in form %}
+                        {% if field.name != 'image1' or field.name != 'image2' %}
+                            {{ field | as_crispy_field }}
+                        {% else %}
+                            {{ field }}
+                        {% endif %}
+                    {% endfor %}
                     <div class="text-right">
                         <a class="btn btn-outline-black rounded-0" href="{% url 'products' %}">Cancel</a>
                         <button class="btn btn-black rounded-0" type="submit">Update Product</button>
@@ -35,4 +41,13 @@
 {% endblock %}
 
 {% block postloadjs %}
+    {{ block.super }}
+    <script type="text/javascript">
+        $('#new-image').change(function() {
+            var file = $('#new-image')[0].files[0];
+            $('#filename').text(`Image will be set to: ${file.name}`);
+            var file1 = $('#new-image')[1].files[1];
+            $('#filename').text(`Image will be set to: ${file1.name}`);
+        });
+    </script>
 {% endblock %}
