--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -32,7 +32,8 @@
           <h4>
             <a href="#" class="home-buttons btn btn-md rounder-0 text-uppercase py-2 text-white">Send a
               Parcel</a>
-            <a href="{% url 'create_account' %}" class="home-buttons btn btn-md rounder-0 text-uppercase py-2 text-white">Open a
+            <a href="{% url 'create_account' %}"
+              class="home-buttons btn btn-md rounder-0 text-uppercase py-2 text-white">Open a
               Credit Account</a>
           </h4>
         </div>
@@ -42,6 +43,22 @@
             <a href="{% url 'store_home' %}"
               class="home-buttons btn btn-md rounder-0 text-uppercase py-2 text-white">Store</a>
           </h4>
+          <div class="row">
+            <div class="col-12 col-md-6">
+              <form method="POST" class="form mb-2" enctype="multipart/form-data">
+                {% csrf_token %}
+                {% for field in quote_form %}
+                
+                {{ field | as_crispy_field }}
+                
+                {% endfor %}
+                <div class="text-right">
+                  <button class="home-buttons btn btn-md rounded-0" type="submit">Get Quote!</button>
+                </div>
+              </form>
+            </div>
+          </div>
+          
         </div>
       </div>
     </div>
