--- a/templates/includes/main-nav.html
+++ b/templates/includes/main-nav.html
@@ -25,7 +25,7 @@
             </a>
             <div class="dropdown-menu border-0" aria-labelledby="clothing-link">
                 <a href="{% url 'create_account' %}" class="dropdown-item">Open a Credit Account</a>
-                <a href="#" class="dropdown-item">Send a Parcel</a>
+                <a href="{% url 'quote' %}" class="dropdown-item">Send a Parcel</a>
             </div>
         </li>
         {% if url != categories or url != products %}
